# couchapi

./: .dockerignore  .editorconfig  .jsdoc.js  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  build.rs  config.toml
.devcontainer/: devcontainer.json
src/: common.rs  config.rs  db.rs  main.rs  state.rs
src/couchdb/: mod.rs
src/metrics/: mod.rs
src/ops/: bulk.rs  create_update.rs  delete.rs  get.rs  get_js.rs  mod.rs  update.rs
