[package]
name = "couchapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.28"
async-trait = "0.1.72"
axum = { version = "0.6.20", features = ["macros", "headers"] }
hyper = "0.14.27"
tower-http = { version = "0.4.4", features = ["trace", "normalize-path"] }
tower-layer = "0.3.2"
reqwest = { version = "0.11.20", features = ["json"] }
walkdir = "2.4.0"
toml = "0.8.2"
boa_engine = "0.17.3"
boa_gc = "0.17.3"
boa_runtime = "0.17.3"
base64 = "0.21.4"
indexmap = "2.0.0"
url = "2.4.1"
headers = "0.3.9"

# MongoDB

# ref: https://jira.mongodb.org/browse/RUST-1779
#bson = "2.7.0"
#mongodb = { version = "2.7.0", features = ["aws-auth"] }
bson = { git = "https://github.com/mongodb/bson-rust", branch = "main" }
mongodb = { git = "https://github.com/mongodb/mongo-rust-driver", rev = "897843b06aa286329b9f0222b37dd6490ee1c624", features = ["aws-auth"] }

# Generic JSON stuff
serde = "1.0.188"
serde_json = "1.0.106"
serde_derive = "1.0.188"
uuid = "1.4.1"
md5 = "0.7.0"
maplit = "1.0.2"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }

# Configuration
config = "0.13.3"
clap = { version = "4.4.2", features = ["derive"] }

[dev-dependencies]
mockall = "0.11.4"
assert-json-diff = "2.0.2"
httpmock = "0.6.8"

[build-dependencies]
walkdir = "2.4.0"
toml = "0.8.2"
serde = "1.0.188"
serde_json = "1.0.106"
serde_derive = "1.0.188"
