[package]
name = "couchapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
tokio = { version = "1.34.0", features = ["full"] }
futures-util = "0.3.29"
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["macros", "headers"] }
hyper = "0.14.27"
tower-http = { version = "0.4.4", features = ["trace", "normalize-path"] }
tower-layer = "0.3.2"
reqwest = { version = "0.11.20", features = ["json"] }
walkdir = "2.4.0"
toml = "0.8.2"
boa_engine = "0.17.3"
boa_gc = "0.17.3"
boa_runtime = "0.17.3"
base64 = "0.21.5"
indexmap = "2.0.0"
url = "2.4.1"
headers = "0.3.9"

# MongoDB
bson = "=2.7.0"
mongodb = { version = "=2.7.1", features = ["aws-auth"] }

# Generic JSON stuff
serde = "1.0.188"
serde_json = "1.0.106"
serde_derive = "1.0.188"
uuid = "1.5.0"
md5 = "0.7.0"
maplit = "1.0.2"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# Configuration
config = "0.13.3"
clap = { version = "4.4.8", features = ["derive"] }

[dev-dependencies]
mockall = "0.11.4"
assert-json-diff = "2.0.2"
httpmock = "0.6.8"

[build-dependencies]
walkdir = "2.4.0"
toml = "0.8.8"
serde = "1.0.192"
serde_json = "1.0.108"
serde_derive = "1.0.192"
