[package]
name = "couchapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
tokio = { version = "1.35.1", features = ["full"] }
futures-util = "0.3.30"
async-trait = "0.1.75"
axum = { version = "0.7.2", features = ["macros"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
http-body-util = "0.1.0"
hyper = "1.1.0"
tower-http = { version = "0.5.0", features = ["trace", "normalize-path"] }
tower-layer = "0.3.2"
reqwest = { version = "0.11.23", features = ["json"] }
walkdir = "2.4.0"
toml = "0.8.8"
boa_engine = "0.17.3"
boa_gc = "0.17.3"
boa_runtime = "0.17.3"
base64 = "0.21.5"
indexmap = "2.1.0"
url = "2.5.0"
headers = "0.4.0"

# MongoDB
bson = "=2.8.1"
mongodb = { version = "=2.8.0", features = ["aws-auth"] }

# Generic JSON stuff
serde = "1.0.193"
serde_json = "1.0.108"
serde_derive = "1.0.193"
uuid = "1.6.1"
md5 = "0.7.0"
maplit = "1.0.2"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# Configuration
config = "0.13.4"
clap = { version = "4.4.11", features = ["derive"] }

# Metrics
metrics = "0.21.1"
metrics-prometheus = "0.5.0"
prometheus = "0.13.3"

[dev-dependencies]
mockall = "0.12.1"
assert-json-diff = "2.0.2"
httpmock = "0.6.8"

[build-dependencies]
walkdir = "2.4.0"
toml = "0.8.8"
serde = "1.0.193"
serde_json = "1.0.108"
serde_derive = "1.0.193"
